--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top">
       <div class="container d-flex align-items-center">
-        <h1 class="logo me-auto"><a href="index.html">Arsha</a></h1>
+        <h1 class="logo me-auto"><a href="index.html">WE Ideathon</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -100,18 +100,33 @@
             data-aos="fade-up"
             data-aos-delay="200"
           >
-            <h1>Better Solutions For Your Business</h1>
+            <h1>Women Empowerment / Mind Empowerment</h1>
             <h2>
-              We are team of talented designers making websites with Bootstrap
+              WE Ideathon is a 12 hours GIRLS ONLY ideathon happening on 10th
+              December 2022, 8:00am onwards at CITTIC,CUSAT
             </h2>
-            <div class="d-flex justify-content-center justify-content-lg-start">
-              <a href="#about" class="btn-get-started scrollto">Get Started</a>
-              <a
-                href="https://www.youtube.com/watch?v=jDDaplaOz7Q"
+            <div
+              class="d-flex flex-column justify-content-center justify-content-lg-start"
+            >
+              <center><a href="#" class="btn-get-started">Register</a></center>
+              <!-- <a
+                href="https://www.youtube.com/"
                 class="glightbox btn-watch-video"
                 ><i class="bi bi-play-circle"></i><span>Watch Video</span></a
-              >
+              > -->
             </div>
+            <script src="https://cdn.logwork.com/widget/countdown.js"></script>
+            <a
+              href="https://logwork.com/countdown-xv61"
+              class="countdown-timer"
+              data-style="circles"
+              data-timezone="Asia/Kolkata"
+              data-textcolor="#ffffff"
+              data-date="2022-11-14 16:36"
+              data-digitscolor="#ffffff"
+              data-unitscolor="#ffffff"
+              >Days Left</a
+            >
           </div>
           <div
             class="col-lg-6 order-1 order-lg-2 hero-img"
@@ -511,27 +526,6 @@
         </div>
       </section>
       <!-- End Services Section -->
-
-      <!-- ======= Cta Section ======= -->
-      <section id="cta" class="cta">
-        <div class="container" data-aos="zoom-in">
-          <div class="row">
-            <div class="col-lg-9 text-center text-lg-start">
-              <h3>Call To Action</h3>
-              <p>
-                Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                cupidatat non proident, sunt in culpa qui officia deserunt
-                mollit anim id est laborum.
-              </p>
-            </div>
-            <div class="col-lg-3 cta-btn-container text-center">
-              <a class="cta-btn align-middle" href="#">Call To Action</a>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- End Cta Section -->
 
       <!-- ======= Portfolio Section ======= -->
       <!-- <section id="portfolio" class="portfolio">
@@ -950,17 +944,17 @@
       <section id="pricing" class="pricing">
         <div class="container" data-aos="fade-up">
           <div class="section-title">
-            <h2>Pricing</h2>
-            <p>
+            <h2>Become a Sponsor</h2>
+            <!-- <p>
               Magnam dolores commodi suscipit. Necessitatibus eius consequatur
               ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
               quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
               Quia fugiat sit in iste officiis commodi quidem hic quas.
-            </p>
+            </p> -->
           </div>
 
           <div class="row">
-            <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
+            <!-- <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
               <div class="box">
                 <h3>Free Plan</h3>
                 <h4><sup>$</sup>0<span>per month</span></h4>
@@ -983,30 +977,32 @@
                 </ul>
                 <a href="#" class="buy-btn">Get Started</a>
               </div>
-            </div>
+            </div> -->
 
             <div
-              class="col-lg-4 mt-4 mt-lg-0"
+              class="col-lg-6 mt-4 mt-lg-0"
               data-aos="fade-up"
               data-aos-delay="200"
             >
               <div class="box featured">
-                <h3>Business Plan</h3>
-                <h4><sup>$</sup>29<span>per month</span></h4>
+                <h3>Platinum Sponsor</h3>
+                <h4><sup>₹</sup>25,000</h4>
                 <ul>
                   <li>
-                    <i class="bx bx-check"></i> Quam adipiscing vitae proin
-                  </li>
-                  <li><i class="bx bx-check"></i> Nec feugiat nisl pretium</li>
-                  <li>
-                    <i class="bx bx-check"></i> Nulla at volutpat diam uteera
+                    <i class="bx bx-check"></i> Logo featured in event venue
+                    (banners / standees / posters / t-shirts/LED wall )
                   </li>
                   <li>
-                    <i class="bx bx-check"></i> Pharetra massa massa ultricies
+                    <i class="bx bx-check"></i> Logo in website. Social media
+                    shoutouts.
                   </li>
                   <li>
-                    <i class="bx bx-check"></i> Massa ultricies mi quis
-                    hendrerit
+                    <i class="bx bx-check"></i> Logo in meetup announcements,
+                    Emails to Attendees and delegates
+                  </li>
+                  <li>
+                    <i class="bx bx-check"></i> Provision for interaction with
+                    attendees and distribution of merchandise
                   </li>
                 </ul>
                 <a href="#" class="buy-btn">Get Started</a>
@@ -1014,28 +1010,20 @@
             </div>
 
             <div
-              class="col-lg-4 mt-4 mt-lg-0"
+              class="col-lg-6 mt-4 mt-lg-0"
               data-aos="fade-up"
               data-aos-delay="300"
             >
               <div class="box">
-                <h3>Developer Plan</h3>
-                <h4><sup>$</sup>49<span>per month</span></h4>
+                <h3>Gold Sponsor</h3>
+                <h4><sup>₹</sup>15,000</h4>
                 <ul>
+                  <li><i class="bx bx-check"></i> Logo in websites.</li>
                   <li>
-                    <i class="bx bx-check"></i> Quam adipiscing vitae proin
+                    <i class="bx bx-check"></i> Logo in meetup announcements,
+                    Emails to Attendees and delegates.
                   </li>
-                  <li><i class="bx bx-check"></i> Nec feugiat nisl pretium</li>
-                  <li>
-                    <i class="bx bx-check"></i> Nulla at volutpat diam uteera
-                  </li>
-                  <li>
-                    <i class="bx bx-check"></i> Pharetra massa massa ultricies
-                  </li>
-                  <li>
-                    <i class="bx bx-check"></i> Massa ultricies mi quis
-                    hendrerit
-                  </li>
+                  <li><i class="bx bx-check"></i> Social media shoutouts.</li>
                 </ul>
                 <a href="#" class="buy-btn">Get Started</a>
               </div>
