--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <ul>
             <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
             <li><a class="nav-link scrollto" href="#about">About</a></li>
-            <li><a class="nav-link scrollto" href="#services">Services</a></li>
+            <!-- <li><a class="nav-link scrollto" href="#services">Services</a></li> -->
             <!-- <li><a class="nav-link   scrollto" href="#portfolio">Portfolio</a></li> -->
             <li><a class="nav-link scrollto" href="#team">Team</a></li>
             <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
@@ -146,7 +146,7 @@
 
     <main id="main">
       <!-- ======= Clients Section ======= -->
-      <section id="clients" class="clients section-bg">
+      <!-- <section id="clients" class="clients section-bg">
         <div class="container">
           <div class="row" data-aos="zoom-in">
             <div
@@ -210,7 +210,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- End Cliens Section -->
 
       <!-- ======= About Us Section ======= -->
@@ -223,33 +223,36 @@
           <div class="row content">
             <div class="col-lg-6">
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Women Empowered (WE) is an initiative by Mind Empowered
+                Charitable Trust aiming
               </p>
               <ul>
                 <li>
-                  <i class="ri-check-double-line"></i> Ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat
+                  <i class="ri-check-double-line"></i> To empower women (18-25
+                  years)
                 </li>
                 <li>
-                  <i class="ri-check-double-line"></i> Duis aute irure dolor in
-                  reprehenderit in voluptate velit
+                  <i class="ri-check-double-line"></i> To provide the girls with
+                  a safe space and an open forum where they can ask their
+                  queries related to their body anonymously from a genuine
+                  expert than use Google to get answers
                 </li>
                 <li>
-                  <i class="ri-check-double-line"></i> Ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat
+                  <i class="ri-check-double-line"></i> To improve physical
+                  wellbeing and female safety by simple techniques of self
+                  defense
                 </li>
               </ul>
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0">
               <p>
-                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                aute irure dolor in reprehenderit in voluptate velit esse cillum
-                dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                cupidatat non proident, sunt in culpa qui officia deserunt
-                mollit anim id est laborum.
+                Mind Empowered Charitable Trust (ME) is an NGO creating mental
+                and physical health awareness and providing skills for
+                personality development of the youth and women(18-25 years)
               </p>
-              <a href="#" class="btn-learn-more">Learn More</a>
+              <a href="https://www.mind-empowered.org/" class="btn-learn-more"
+                >Learn More</a
+              >
             </div>
           </div>
         </div>
@@ -265,13 +268,12 @@
             >
               <div class="content">
                 <h3>
-                  Eum ipsam laborum deleniti
-                  <strong>velit pariatur architecto aut nihil</strong>
+                  <strong>Women Empowered Ideathon</strong> powered by Mind
+                  Empowered
                 </h3>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Duis aute irure dolor in reprehenderit
+                  12 hours GIRLS ONLY ideathon happening on 10th December 2022,
+                  8:00am onwards at CITTIC,CUSAT
                 </p>
               </div>
 
@@ -282,8 +284,8 @@
                       data-bs-toggle="collapse"
                       class="collapse"
                       data-bs-target="#accordion-list-1"
-                      ><span>01</span> Non consectetur a erat nam at lectus urna
-                      duis? <i class="bx bx-chevron-down icon-show"></i
+                      ><span>01</span> What we do?
+                      <i class="bx bx-chevron-down icon-show"></i
                       ><i class="bx bx-chevron-up icon-close"></i
                     ></a>
                     <div
@@ -292,10 +294,20 @@
                       data-bs-parent=".accordion-list"
                     >
                       <p>
-                        Feugiat pretium nibh ipsum consequat. Tempus iaculis
-                        urna id volutpat lacus laoreet non curabitur gravida.
-                        Venenatis lectus magna fringilla urna porttitor rhoncus
-                        dolor purus non.
+                        Conduct Technical sessions in various domain like
+                        cybersecurity, blockchain, web-development, machine
+                        learning organize technical events like ideathon and
+                        hackathon
+
+                        <br />
+                        Meetups with women entrepreneurs to inspire young girls
+                        <br />
+                        Gynaecological sessions with an expert Gynaecologist.
+
+                        <br />
+
+                        Self defense workshops in collaboration with Vanitha
+                        Police for our female youth
                       </p>
                     </div>
                   </li>
@@ -305,8 +317,8 @@
                       data-bs-toggle="collapse"
                       data-bs-target="#accordion-list-2"
                       class="collapsed"
-                      ><span>02</span> Feugiat scelerisque varius morbi enim
-                      nunc? <i class="bx bx-chevron-down icon-show"></i
+                      ><span>02</span> How we are different?
+                      <i class="bx bx-chevron-down icon-show"></i
                       ><i class="bx bx-chevron-up icon-close"></i
                     ></a>
                     <div
@@ -315,12 +327,10 @@
                       data-bs-parent=".accordion-list"
                     >
                       <p>
-                        Dolor sit amet consectetur adipiscing elit pellentesque
-                        habitant morbi. Id interdum velit laoreet id donec
-                        ultrices. Fringilla phasellus faucibus scelerisque
-                        eleifend donec pretium. Est pellentesque elit
-                        ullamcorper dignissim. Mauris ultrices eros in cursus
-                        turpis massa tincidunt dui.
+                        Safe space <br />
+                        Anonymously ask queries <br />
+                        Free Sessions <br />
+                        Empower yourself
                       </p>
                     </div>
                   </li>
@@ -330,8 +340,8 @@
                       data-bs-toggle="collapse"
                       data-bs-target="#accordion-list-3"
                       class="collapsed"
-                      ><span>03</span> Dolor sit amet consectetur adipiscing
-                      elit? <i class="bx bx-chevron-down icon-show"></i
+                      ><span>03</span> Why WE Ideathon?
+                      <i class="bx bx-chevron-down icon-show"></i
                       ><i class="bx bx-chevron-up icon-close"></i
                     ></a>
                     <div
@@ -340,12 +350,16 @@
                       data-bs-parent=".accordion-list"
                     >
                       <p>
-                        Eleifend mi in nulla posuere sollicitudin aliquam
-                        ultrices sagittis orci. Faucibus pulvinar elementum
-                        integer enim. Sem nulla pharetra diam sit amet nisl
-                        suscipit. Rutrum tellus pellentesque eu tincidunt.
-                        Lectus urna duis convallis convallis tellus. Urna
-                        molestie at elementum eu facilisis sed odio morbi quis
+                        Never been to a hackathon before? Go for our 12 hours
+                        Girls Only Ideathon <br /><br />
+                        10+ mentors taking half an hour technical sessions in
+                        different domains parallelly to guide girls
+                        <br /><br />
+                        Swags from big organizations like Github and WiCYS
+                        <br /><br />
+                        Opportunity to interact with industry speakers and
+                        entrepreneurs<br /><br />
+                        Yummy snacks and food for FREE
                       </p>
                     </div>
                   </li>
@@ -450,7 +464,7 @@
       <!-- End Skills Section -->
 
       <!-- ======= Services Section ======= -->
-      <section id="services" class="services section-bg">
+      <!-- <section id="services" class="services section-bg">
         <div class="container" data-aos="fade-up">
           <div class="section-title">
             <h2>Services</h2>
@@ -524,7 +538,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- End Services Section -->
 
       <!-- ======= Portfolio Section ======= -->
@@ -1038,12 +1052,12 @@
         <div class="container" data-aos="fade-up">
           <div class="section-title">
             <h2>Frequently Asked Questions</h2>
-            <p>
+            <!-- <p>
               Magnam dolores commodi suscipit. Necessitatibus eius consequatur
               ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
               quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
               Quia fugiat sit in iste officiis commodi quidem hic quas.
-            </p>
+            </p> -->
           </div>
 
           <div class="faq-list">
@@ -1183,12 +1197,12 @@
         <div class="container" data-aos="fade-up">
           <div class="section-title">
             <h2>Contact</h2>
-            <p>
+            <!-- <p>
               Magnam dolores commodi suscipit. Necessitatibus eius consequatur
               ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
               quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
               Quia fugiat sit in iste officiis commodi quidem hic quas.
-            </p>
+            </p> -->
           </div>
 
           <div class="row">
@@ -1197,27 +1211,37 @@
                 <div class="address">
                   <i class="bi bi-geo-alt"></i>
                   <h4>Location:</h4>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <p>
+                    CITTIC, Savanna Hostel, Near University Guest House, CUSAT,
+                    682022
+                  </p>
                 </div>
 
                 <div class="email">
                   <i class="bi bi-envelope"></i>
                   <h4>Email:</h4>
-                  <p>info@example.com</p>
+                  <p>...</p>
                 </div>
 
                 <div class="phone">
                   <i class="bi bi-phone"></i>
                   <h4>Call:</h4>
-                  <p>+1 5589 55488 55s</p>
+                  <p>+91</p>
                 </div>
-
                 <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3928.7068385849166!2d76.32596341495108!3d10.041032575081049!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b080c38238a5fa1%3A0x49d15730ab604350!2sCITTIC!5e0!3m2!1sen!2sin!4v1668252523988!5m2!1sen!2sin"
+                  frameborder="0"
+                  style="border: 0; width: 100%; height: 290px"
+                  allowfullscreen
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
+                <!-- <iframe
                   src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
                   frameborder="0"
                   style="border: 0; width: 100%; height: 290px"
                   allowfullscreen
-                ></iframe>
+                ></iframe> -->
               </div>
             </div>
 
@@ -1314,37 +1338,14 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-3 col-md-6 footer-contact">
-              <h3>Arsha</h3>
+              <h3>Women Empowered Ideathon</h3>
               <p>
-                A108 Adam Street <br />
-                New York, NY 535022<br />
-                United States <br /><br />
-                <strong>Phone:</strong> +1 5589 55488 55<br />
-                <strong>Email:</strong> info@example.com<br />
+                Savanna Hostel <br />
+                Near University Guest House<br />
+                CUSAT, 682022<br /><br />
+                <strong>Phone:</strong> <br />
+                <strong>Email:</strong> <br />
               </p>
-            </div>
-
-            <div class="col-lg-3 col-md-6 footer-links">
-              <h4>Useful Links</h4>
-              <ul>
-                <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Home</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">About us</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i> <a href="#">Services</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a href="#">Terms of service</a>
-                </li>
-                <li>
-                  <i class="bx bx-chevron-right"></i>
-                  <a href="#">Privacy policy</a>
-                </li>
-              </ul>
             </div>
 
             <!-- <div class="col-lg-3 col-md-6 footer-links">
@@ -1373,18 +1374,18 @@
 
             <div class="col-lg-3 col-md-6 footer-links">
               <h4>Our Social Networks</h4>
-              <p>
+              <!-- <p>
                 Cras fermentum odio eu feugiat lide par naso tierra videa magna
                 derita valies
-              </p>
+              </p> -->
               <div class="social-links mt-3">
-                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
+                <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
+                <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
                 <a href="#" class="instagram"
                   ><i class="bx bxl-instagram"></i
                 ></a>
-                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
+                <!-- <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
               </div>
             </div>
           </div>
@@ -1393,7 +1394,7 @@
 
       <div class="container footer-bottom clearfix">
         <div class="copyright">
-          &copy; Copyright <strong><span>Arsha</span></strong
+          &copy; Copyright <strong><span>Mind Empowered</span></strong
           >. All Rights Reserved
         </div>
         <div class="credits">
