updates to the header on landing page

--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@
             data-aos="fade-up"
             data-aos-delay="200"
           >
-            <h1>Women Empowerment / Mind Empowerment</h1>
+            <h1>Women Empowered</h1>
             <h2>
+              WE a part of ME <br /><br />
               WE Ideathon is a 12 hours GIRLS ONLY ideathon happening on 10th
               December 2022, 8:00am onwards at CITTIC,CUSAT
             </h2>
@@ -115,6 +116,7 @@
                 ><i class="bi bi-play-circle"></i><span>Watch Video</span></a
               > -->
             </div>
+            <br /><br />
             <script src="https://cdn.logwork.com/widget/countdown.js"></script>
             <a
               href="https://logwork.com/countdown-xv61"
@@ -122,7 +124,7 @@
               data-style="circles"
               data-timezone="Asia/Kolkata"
               data-textcolor="#ffffff"
-              data-date="2022-11-14 16:36"
+              data-date="2022-12-10 08:00"
               data-digitscolor="#ffffff"
               data-unitscolor="#ffffff"
               >Days Left</a
