--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@
       <!-- End Portfolio Section -->
 
       <!-- ======= Team Section ======= -->
-      <section id="team" class="team section-bg">
+      <!-- <section id="team" class="team section-bg">
         <div class="container" data-aos="fade-up">
           <div class="section-title">
             <h2>Team</h2>
@@ -953,7 +953,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- End Team Section -->
 
       <!-- ======= Pricing Section ======= -->
@@ -1070,7 +1070,7 @@
                   data-bs-toggle="collapse"
                   class="collapse"
                   data-bs-target="#faq-list-1"
-                  >Non consectetur a erat nam at lectus urna duis?
+                  >Should I be on a team when submitting my idea?
                   <i class="bx bx-chevron-down icon-show"></i
                   ><i class="bx bx-chevron-up icon-close"></i
                 ></a>
@@ -1080,10 +1080,9 @@
                   data-bs-parent=".faq-list"
                 >
                   <p>
-                    Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id
-                    volutpat lacus laoreet non curabitur gravida. Venenatis
-                    lectus magna fringilla urna porttitor rhoncus dolor purus
-                    non.
+                    We encourage students to participate in teams of 2-5
+                    students. If you don’t have a team, apply anyways and your
+                    university we’ll help match you to a team.
                   </p>
                 </div>
               </li>
@@ -1094,8 +1093,8 @@
                   data-bs-toggle="collapse"
                   data-bs-target="#faq-list-2"
                   class="collapsed"
-                  >Feugiat scelerisque varius morbi enim nunc?
-                  <i class="bx bx-chevron-down icon-show"></i
+                  >Which programming language should I know in order to
+                  participate? <i class="bx bx-chevron-down icon-show"></i
                   ><i class="bx bx-chevron-up icon-close"></i
                 ></a>
                 <div
@@ -1103,13 +1102,7 @@
                   class="collapse"
                   data-bs-parent=".faq-list"
                 >
-                  <p>
-                    Dolor sit amet consectetur adipiscing elit pellentesque
-                    habitant morbi. Id interdum velit laoreet id donec ultrices.
-                    Fringilla phasellus faucibus scelerisque eleifend donec
-                    pretium. Est pellentesque elit ullamcorper dignissim. Mauris
-                    ultrices eros in cursus turpis massa tincidunt dui.
-                  </p>
+                  <p>something</p>
                 </div>
               </li>
 
@@ -1119,7 +1112,7 @@
                   data-bs-toggle="collapse"
                   data-bs-target="#faq-list-3"
                   class="collapsed"
-                  >Dolor sit amet consectetur adipiscing elit?
+                  >Should I bring food?
                   <i class="bx bx-chevron-down icon-show"></i
                   ><i class="bx bx-chevron-up icon-close"></i
                 ></a>
@@ -1129,12 +1122,8 @@
                   data-bs-parent=".faq-list"
                 >
                   <p>
-                    Eleifend mi in nulla posuere sollicitudin aliquam ultrices
-                    sagittis orci. Faucibus pulvinar elementum integer enim. Sem
-                    nulla pharetra diam sit amet nisl suscipit. Rutrum tellus
-                    pellentesque eu tincidunt. Lectus urna duis convallis
-                    convallis tellus. Urna molestie at elementum eu facilisis
-                    sed odio morbi quis
+                    No! There will be arrangements for food and snacks for all
+                    for FREE!
                   </p>
                 </div>
               </li>
@@ -1145,8 +1134,8 @@
                   data-bs-toggle="collapse"
                   data-bs-target="#faq-list-4"
                   class="collapsed"
-                  >Tempus quam pellentesque nec nam aliquam sem et tortor
-                  consequat? <i class="bx bx-chevron-down icon-show"></i
+                  >Who can participate in the Women Ideathon?
+                  <i class="bx bx-chevron-down icon-show"></i
                   ><i class="bx bx-chevron-up icon-close"></i
                 ></a>
                 <div
@@ -1154,12 +1143,7 @@
                   class="collapse"
                   data-bs-parent=".faq-list"
                 >
-                  <p>
-                    Molestie a iaculis at erat pellentesque adipiscing commodo.
-                    Dignissim suspendisse in est ante in. Nunc vel risus commodo
-                    viverra maecenas accumsan. Sit amet nisl suscipit adipiscing
-                    bibendum est. Purus gravida quis blandit turpis cursus in.
-                  </p>
+                  <p>Any undergraduate female student.</p>
                 </div>
               </li>
 
@@ -1169,8 +1153,7 @@
                   data-bs-toggle="collapse"
                   data-bs-target="#faq-list-5"
                   class="collapsed"
-                  >Tortor vitae purus faucibus ornare. Varius vel pharetra vel
-                  turpis nunc eget lorem dolor?
+                  >Does the event cost anything?
                   <i class="bx bx-chevron-down icon-show"></i
                   ><i class="bx bx-chevron-up icon-close"></i
                 ></a>
@@ -1179,13 +1162,7 @@
                   class="collapse"
                   data-bs-parent=".faq-list"
                 >
-                  <p>
-                    Laoreet sit amet cursus sit amet dictum sit amet justo.
-                    Mauris vitae ultricies leo integer malesuada nunc vel.
-                    Tincidunt eget nullam non nisi est sit amet. Turpis nunc
-                    eget lorem dolor sed. Ut venenatis tellus in metus vulputate
-                    eu scelerisque.
-                  </p>
+                  <p>No. It is completely free.</p>
                 </div>
               </li>
             </ul>
