--- a/index.html
+++ b/index.html
@@ -1199,14 +1199,14 @@
                 <div class="email">
                   <i class="bi bi-envelope"></i>
                   <h4>Email:</h4>
-                  <p>...</p>
+                  <p>mindempowered2020@gmail.com</p>
                 </div>
 
-                <div class="phone">
+                <!-- <div class="phone">
                   <i class="bi bi-phone"></i>
                   <h4>Call:</h4>
                   <p>+91</p>
-                </div>
+                </div> -->
                 <iframe
                   src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3928.7068385849166!2d76.32596341495108!3d10.041032575081049!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b080c38238a5fa1%3A0x49d15730ab604350!2sCITTIC!5e0!3m2!1sen!2sin!4v1668252523988!5m2!1sen!2sin"
                   frameborder="0"
@@ -1322,8 +1322,8 @@
                 Savanna Hostel <br />
                 Near University Guest House<br />
                 CUSAT, 682022<br /><br />
-                <strong>Phone:</strong> <br />
-                <strong>Email:</strong> <br />
+                <!-- <strong>Phone:</strong> <br /> -->
+                <strong>Email:</strong> mindempowered2020@gmail.com <br />
               </p>
             </div>
 
@@ -1359,8 +1359,12 @@
               </p> -->
               <div class="social-links mt-3">
                 <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
-                <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
-                <a href="#" class="instagram"
+                <a href="https://bit.ly/Mind-EmpoweredFB" class="facebook"
+                  ><i class="bx bxl-facebook"></i
+                ></a>
+                <a
+                  href="https://www.instagram.com/mind.empowered/"
+                  class="instagram"
                   ><i class="bx bxl-instagram"></i
                 ></a>
                 <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
