--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <li><a class="nav-link scrollto" href="#about">About</a></li>
             <!-- <li><a class="nav-link scrollto" href="#services">Services</a></li> -->
             <!-- <li><a class="nav-link   scrollto" href="#portfolio">Portfolio</a></li> -->
-            <li><a class="nav-link scrollto" href="#team">Team</a></li>
+            <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
             <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -81,7 +81,7 @@
           </li> -->
             <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
             <li>
-              <a class="getstarted scrollto" href="#about">Get Started</a>
+              <!-- <a class="getstarted scrollto" href="#about">Get Started</a> -->
             </li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
@@ -109,7 +109,15 @@
             <div
               class="d-flex flex-column justify-content-center justify-content-lg-start"
             >
-              <center><a href="#" class="btn-get-started">Register</a></center>
+              <center>
+                <!-- <a href="#" class="btn-get-started">Register</a> -->
+                <div
+                  class="apply-button"
+                  data-hackathon-slug="we-ideathon"
+                  data-button-theme="dark-inverted"
+                  style="height: 44px; width: 312px"
+                ></div>
+              </center>
               <!-- <a
                 href="https://www.youtube.com/"
                 class="glightbox btn-watch-video"
@@ -148,14 +156,14 @@
 
     <main id="main">
       <!-- ======= Clients Section ======= -->
-      <!-- <section id="clients" class="clients section-bg">
+      <section id="clients" class="clients section-bg">
         <div class="container">
           <div class="row" data-aos="zoom-in">
             <div
               class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center"
             >
               <img
-                src="assets/img/clients/client-1.png"
+                src="assets/img/clients/devfolio.png"
                 class="img-fluid"
                 alt=""
               />
@@ -165,7 +173,7 @@
               class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center"
             >
               <img
-                src="assets/img/clients/client-2.png"
+                src="assets/img/clients/polygon.png"
                 class="img-fluid"
                 alt=""
               />
@@ -175,7 +183,7 @@
               class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center"
             >
               <img
-                src="assets/img/clients/client-3.png"
+                src="assets/img/clients/filecoin.png"
                 class="img-fluid"
                 alt=""
               />
@@ -185,7 +193,7 @@
               class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center"
             >
               <img
-                src="assets/img/clients/client-4.png"
+                src="assets/img/clients/replit.png"
                 class="img-fluid"
                 alt=""
               />
@@ -195,7 +203,7 @@
               class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center"
             >
               <img
-                src="assets/img/clients/client-5.png"
+                src="assets/img/clients/solana.png"
                 class="img-fluid"
                 alt=""
               />
@@ -205,14 +213,14 @@
               class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center"
             >
               <img
-                src="assets/img/clients/client-6.png"
+                src="assets/img/clients/fossu.png"
                 class="img-fluid"
                 alt=""
               />
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
       <!-- End Cliens Section -->
 
       <!-- ======= About Us Section ======= -->
@@ -1409,5 +1417,6 @@
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
+    <script defer async src="https://apply.devfolio.co/v2/sdk.js"></script>
   </body>
 </html>
