--- a/index.html
+++ b/index.html
@@ -158,65 +158,88 @@
       <!-- ======= Clients Section ======= -->
       <section id="clients" class="clients section-bg">
         <div class="container">
-          <div class="row" data-aos="zoom-in">
+          <div class="row">
             <div
-              class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center"
+              class="col-lg-2 col-md-4 col-4 d-flex align-items-center justify-content-center"
             >
-              <img
-                src="assets/img/clients/devfolio.png"
-                class="img-fluid"
-                alt=""
-              />
+              <a href="https://devfolio.co/discover">
+                <img
+                  src="assets/img/clients/devfolio.png"
+                  class="img-fluid"
+                  alt=""
+                />
+              </a>
             </div>
 
             <div
-              class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center"
+              class="col-lg-2 col-md-4 col-4 d-flex align-items-center justify-content-center"
             >
-              <img
-                src="assets/img/clients/polygon.png"
-                class="img-fluid"
-                alt=""
-              />
+              <a href="https://polygon.technology/">
+                <img
+                  src="assets/img/clients/polygon.png"
+                  class="img-fluid"
+                  alt=""
+                />
+              </a>
             </div>
 
             <div
-              class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center"
+              class="col-lg-2 col-md-4 col-4 d-flex align-items-center justify-content-center"
             >
-              <img
-                src="assets/img/clients/filecoin.png"
-                class="img-fluid"
-                alt=""
-              />
+              <a href="https://filecoin.io/">
+                <img
+                  src="assets/img/clients/filecoin.png"
+                  class="img-fluid"
+                  alt=""
+                />
+              </a>
             </div>
 
             <div
-              class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center"
+              class="col-lg-2 col-md-4 col-4 d-flex align-items-center justify-content-center"
             >
-              <img
-                src="assets/img/clients/replit.png"
-                class="img-fluid"
-                alt=""
-              />
+              <a href="https://replit.com/">
+                <img
+                  src="assets/img/clients/replit.png"
+                  class="img-fluid"
+                  alt=""
+                />
+              </a>
             </div>
 
             <div
-              class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center"
+              class="col-lg-2 col-md-4 col-4 d-flex align-items-center justify-content-center"
             >
-              <img
-                src="assets/img/clients/solana.png"
-                class="img-fluid"
-                alt=""
-              />
+              <a href="https://solana.com/">
+                <img
+                  src="assets/img/clients/solana.png"
+                  class="img-fluid"
+                  alt=""
+                />
+              </a>
             </div>
 
             <div
-              class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center"
+              class="col-lg-2 col-md-4 col-4 d-flex align-items-center justify-content-center"
             >
-              <img
-                src="assets/img/clients/fossu.png"
-                class="img-fluid"
-                alt=""
-              />
+              <a href="https://fossunited.org/">
+                <img
+                  src="assets/img/clients/fossu.png"
+                  class="img-fluid"
+                  alt=""
+                />
+              </a>
+            </div>
+            <div
+              class="col-lg-2 col-md-4 col-4 d-flex align-items-center justify-content-center"
+            >
+              <a href="https://www.tinkerhub.org/">
+                <img
+                  src="assets/img/clients/tinkerhub.png"
+                  class="img-fluid"
+                  alt=""
+                />
+              </a>
             </div>
           </div>
         </div>
