added sponsor section

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
     <main id="main">
       <!-- ======= Clients Section ======= -->
-      <section id="clients" class="clients section-bg">
+      <!-- <section id="clients" class="clients section-bg">
         <div class="container">
           <div class="row">
             <div
@@ -243,7 +243,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- End Cliens Section -->
 
       <!-- ======= About Us Section ======= -->
@@ -1073,6 +1073,91 @@
                   <li><i class="bx bx-check"></i> Social media shoutouts.</li>
                 </ul>
                 <a href="#" class="buy-btn">Get Started</a>
+              </div>
+            </div>
+          </div>
+          <br /><br />
+
+          <div class="row">
+            <div class="section-title">
+              <h2>Title Sponsors</h2>
+            </div>
+
+            <div
+              class="d-flex align-items-center justify-content-evenly title_sponsors"
+            >
+              <div>
+                <a href="https://devfolio.co/discover">
+                  <img
+                    src="assets/img/clients/devfolio.png"
+                    class="img-fluid"
+                    alt=""
+                  />
+                </a>
+              </div>
+              <div>
+                <a href="https://www.tinkerhub.org/">
+                  <img
+                    src="assets/img/clients/tinkerhub.png"
+                    class="img-fluid"
+                    alt=""
+                  />
+                </a>
+              </div>
+              <div>
+                <a href="https://fossunited.org/">
+                  <img
+                    src="assets/img/clients/fossu.png"
+                    class="img-fluid"
+                    alt=""
+                  />
+                </a>
+              </div>
+            </div>
+          </div>
+          <br /><br />
+          <div class="row">
+            <div class="section-title">
+              <h2>Sponsors</h2>
+            </div>
+            <div
+              class="d-flex align-items-center justify-content-evenly normal_sponsors"
+            >
+              <div>
+                <a href="https://polygon.technology/">
+                  <img
+                    src="assets/img/clients/polygon.png"
+                    class="img-fluid"
+                    alt=""
+                  />
+                </a>
+              </div>
+              <div>
+                <a href="https://filecoin.io/">
+                  <img
+                    src="assets/img/clients/filecoin.png"
+                    class="img-fluid"
+                    alt=""
+                  />
+                </a>
+              </div>
+              <div>
+                <a href="https://replit.com/">
+                  <img
+                    src="assets/img/clients/replit.png"
+                    class="img-fluid"
+                    alt=""
+                  />
+                </a>
+              </div>
+              <div>
+                <a href="https://solana.com/">
+                  <img
+                    src="assets/img/clients/solana.png"
+                    class="img-fluid"
+                    alt=""
+                  />
+                </a>
               </div>
             </div>
           </div>
