new timer added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>ME / WE Ideathon</title>
+    <title>ME / STARLET</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -39,6 +39,9 @@
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
 
+    <!--website icon-->
+    <link rel="shortcut icon" href="./assets/img/logo/starlet3.png" type="image/x-icon">
+
     <!-- =======================================================
   * Template Name: Arsha - v4.9.1
   * Template URL: https://bootstrapmade.com/arsha-free-bootstrap-html-template-corporate/
@@ -51,9 +54,9 @@
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top">
       <div class="container d-flex align-items-center">
-        <h1 class="logo me-auto"><a href="index.html">WE Ideathon</a></h1>
+        <a href="index.html" class="logo me-auto"><img src="assets/img/logo/starlet3.png" alt="" class="img-fluid" width="50" height="600"></a>
+        <h1 class="logo me-auto"><a href="index.html">STARLET</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
         <nav id="navbar" class="navbar">
           <ul>
@@ -126,17 +129,8 @@
             </div>
             <br /><br />
             <script src="https://cdn.logwork.com/widget/countdown.js"></script>
-            <a
-              href="https://logwork.com/countdown-xv61"
-              class="countdown-timer"
-              data-style="circles"
-              data-timezone="Asia/Kolkata"
-              data-textcolor="#ffffff"
-              data-date="2022-12-10 08:00"
-              data-digitscolor="#ffffff"
-              data-unitscolor="#ffffff"
-              >Days Left</a
-            >
+            <a href="https://logwork.com/countdown-x6y2" class="countdown-timer" data-style="circles" data-timezone="Asia/Kolkata" data-textcolor="#faf5f5" data-date="2023-02-18 10:00" data-unitscolor="#f5f2f2">DAYS LEFT</a>
+            
           </div>
           <div
             class="col-lg-6 order-1 order-lg-2 hero-img"
