logo and some styling

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
+          <li><a class="nav-link scrollto" href="#PRICE">Prices</a></li>
           <!-- <li><a class="nav-link scrollto" href="#services">Services</a></li> -->
           <!-- <li><a class="nav-link   scrollto" href="#portfolio">Portfolio</a></li> -->
           <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
@@ -340,12 +341,25 @@
                 </li>
               </ul>
             </div>
+            <center>
+              <!-- <a href="#" class="btn-get-started">Register</a> -->
+              <div class="apply-button" data-hackathon-slug="we-ideathon" data-button-theme="light"
+                style="height: 44px; width: 312px">
+                
+              </div>
+            </center>
           </div>
-
+<!-- 
           <div class="col-lg-5 align-items-stretch order-1 order-lg-2 img"
             style="background-image: url('assets/img/why-us.png')" data-aos="zoom-in" data-aos-delay="150">
             &nbsp;
+          </div> -->
+
+          <div class="col-lg-5 align-items-stretch order-1 order-lg-2 img"
+            style="background-image: url('assets/img/logo/startlet-removebg-preview.png')" data-aos="zoom-in" data-aos-delay="150">
+            &nbsp;
           </div>
+
         </div>
       </div>
     </section>
@@ -934,7 +948,7 @@
         </center>
         </div>
     </section>
-    
+
     <!-- ======= Pricing Section ======= -->
     <section id="pricing" class="pricing">
       <div class="container" data-aos="fade-up">
@@ -1029,7 +1043,7 @@
                 <img src="assets/img/clients/devfolio.png" class="img-fluid" alt="" />
               </a>
             </div>
-            <div>
+            <!-- <div>
               <a href="https://www.tinkerhub.org/">
                 <img src="assets/img/clients/tinkerhub.png" class="img-fluid" alt="" />
               </a>
@@ -1038,7 +1052,7 @@
               <a href="https://fossunited.org/">
                 <img src="assets/img/clients/fossu.png" class="img-fluid" alt="" />
               </a>
-            </div>
+            </div> -->
           </div>
         </div>
         <br /><br />
@@ -1309,7 +1323,7 @@
               <a href="https://bit.ly/Mind-EmpoweredFB" class="facebook"><i class="bx bxl-facebook"></i></a>
               <a href="https://www.instagram.com/mind.empowered/" class="instagram"><i class="bx bxl-instagram"></i></a>
               <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
-              <!-- <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
+              <a href="https://www.linkedin.com/in/women-empowered-731130261/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
             </div>
           </div>
         </div>
