--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
           <h1>Women Empowered</h1>
           <h2>
             WE a part of ME <br /><br />
-            WE Ideathon is a 12 hours GIRLS ONLY ideathon happening on 10th
-            December 2022, 8:00am onwards at CITTIC,CUSAT
+            STARLET is  GIRLS ONLY ideathon happening on 14th
+            February 2023
           </h2>
           <div class="d-flex flex-column justify-content-center justify-content-lg-start">
             <center>
@@ -271,12 +271,12 @@
           <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch order-2 order-lg-1">
             <div class="content">
               <h3>
-                <strong>Women Empowered Ideathon</strong> powered by Mind
+                <strong>STARLET</strong> <br> powered by Women
                 Empowered
               </h3>
               <p>
-                12 hours GIRLS ONLY ideathon happening on 10th December 2022,
-                8:00am onwards at CITTIC,CUSAT
+                 GIRLS ONLY ideathon happening on 18th February 2023,
+                 <!--location goes here-->
               </p>
             </div>
 
@@ -322,7 +322,7 @@
 
                 <li>
                   <a data-bs-toggle="collapse" data-bs-target="#accordion-list-3" class="collapsed"><span>03</span> Why
-                    WE Ideathon?
+                    STARLET?
                     <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-3" class="collapse" data-bs-parent=".accordion-list">
                     <p>
@@ -1278,7 +1278,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Women Empowered Ideathon</h3>
+            <h3>STARLET</h3>
             <p>
               Savanna Hostel <br />
               Near University Guest House<br />
