--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <h1>Women Empowered</h1>
           <h2>
             WE a part of ME <br /><br />
-            STARLET is  GIRLS ONLY ideathon happening on 14th
+            STARLET is  GIRLS ONLY hackathon happening on 14th
             February 2023
           </h2>
           <div class="d-flex flex-column justify-content-center justify-content-lg-start">
@@ -275,7 +275,7 @@
                 Empowered
               </h3>
               <p>
-                 GIRLS ONLY ideathon happening on 18th February 2023,
+                 GIRLS ONLY hackathon happening on 18th February 2023,
                  <!--location goes here-->
               </p>
             </div>
