spelling correction phase 1

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#PRIZE">Prizes</a></li>
+          <!-- <li><a class="nav-link scrollto" href="#PRIZE">Prizes</a></li> -->
           
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           <li>
@@ -221,9 +221,9 @@
                     <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-1" class="collapse show" data-bs-parent=".accordion-list">
                     <p>
-                      it is an intellectually innovating enviornment that suprs innovation and collaboration
+                      it is an intellectually innovating enviornment that spurs innovation and collaboration
                       to get the best out of technologists. It encourage participant to team up and apply those
-                      skills to create a modernized approach to current issue faced by the industries.
+                      skills to create a modernized approach to current issues faced by the industries.
                     </p>
                   </div>
                 </li>
@@ -251,7 +251,7 @@
                       <p>&#9642; Mentoring</p>
                       <p>&#9642; Entrepreneurship</p>
                       <p>&#9642; Creativity</p>
-                      <p>&#9642; Oppurtunity</p>
+                      <p>&#9642; Opportunity</p>
                       <p>&#9642; Networking</p>
                       <p>&#9642; Innovation</p>
                       <p>&#9642; Knowledge</p>
@@ -260,16 +260,16 @@
                 </li>
                 <li>
                   <a data-bs-toggle="collapse" data-bs-target="#accordion-list-4" class="collapsed"><span>04</span> 
-                    What are the Benifits?
+                    What are the Benefits?
                     <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
                   <div id="accordion-list-4" class="collapse" data-bs-parent=".accordion-list">
                     <ul>
-                      <p>&#9642; Intervention with dev community</p>
+                      <p>&#9642; Interaction with dev community</p>
                       <p>&#9642; Interesting way of learning</p>
                       <p>&#9642; Healthy work environment</p>
                       <p>&#9642; Rise to innovate</p>
                       <p>&#9642; Strong networking oppurtunities</p>
-                      <p>&#9642; Discussion to get mentoring by industry leaders</p>
+                      <p>&#9642; Get mentoring from industry leaders</p>
                     </ul>
                   </div>
                 </li>
@@ -300,7 +300,8 @@
       </div>
     </section>
     <!-- End Why Us Section -->
-    <section id="PRIZE">
+    <!-- update on price -->
+    <!-- <section id="PRIZE">
       <div class="container" data-aos="fade-up">
         <div class="section-title">
           <h2>PRIZE DETAILS</h2>
@@ -309,7 +310,7 @@
           <p>ANNOUNCE SOON</p>
         </center>
       </div>
-    </section>
+    </section> -->
 
     <!-- ======= SPONSER Section ======= -->
     <section id="pricing" class="pricing">
