--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                 should I know in order to
                 participate? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
-                <p>something</p>
+                <p>any programming language in order to participate</p>
               </div>
             </li>
 
@@ -520,10 +520,10 @@
             <li data-aos="fade-up" data-aos-delay="400">
               <i class="bx bx-help-circle icon-help"></i>
               <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed">Who can participate in the
-                Women Ideathon?
+                STARLET hackton?
                 <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
-                <p>Any undergraduate female student.</p>
+                <p>Any undergraduate female student and other gender minorities.</p>
               </div>
             </li>
 
