--- a/index.html
+++ b/index.html
@@ -483,14 +483,14 @@
           <ul>
             <li data-aos="fade-up" data-aos-delay="100">
               <i class="bx bx-help-circle icon-help"></i>
-              <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Should I be on a team when
+              <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Should I be in a team when
                 submitting my idea?
                 <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
                 <p>
                   We encourage students to participate in teams of 2-5
-                  students. If you don’t have a team, apply anyways and your
-                  university we’ll help match you to a team.
+                  students. If you don’t have a team, apply anyways and we will help 
+                  match you to a team here
                 </p>
               </div>
             </li>
@@ -501,7 +501,7 @@
                 should I know in order to
                 participate? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
-                <p>any programming language in order to participate</p>
+                <p>any programming language is fine in order to participate</p>
               </div>
             </li>
 
@@ -520,7 +520,7 @@
             <li data-aos="fade-up" data-aos-delay="400">
               <i class="bx bx-help-circle icon-help"></i>
               <a data-bs-toggle="collapse" data-bs-target="#faq-list-4" class="collapsed">Who can participate in the
-                STARLET hackton?
+                STARLET hackthon?
                 <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
                 <p>Any undergraduate female student and other gender minorities.</p>
